styles/header.css
.header{
    position: fixed;
    width: 100%;
    z-index: 4;
}

/* 1.TOP NAVIGATION START */

/* 1.1.BURGER START */

.burger-view {
    position: relative;
    display: none;
    width: 30px;
    height: 20px;

    cursor: pointer;
}

.burger-view::before,
.burger-view::after, 
.burger-view span {
    position: absolute;
    display: block;
    content: ' ';
    width: 100%;
    height: 2px;

    background-color: var(--horses);
    border-radius: 3px;
    transition: .3s;
}
.burger-view::after {
    bottom: 0;
}

.burger-view span {
    top: 9px;
}

/* 1.2.BURGER END */
.header__tagline {
    width: 12%;

    font-family: var(--semiBold);
    font-size: var(--text-12);
    line-height: 18px;

    color: var(--rosyBrown);
}

.header__top-nav {
    width: 100%;

    background-color: transparent;
    transition: 0.5s;
}

.header_scroll {
    background-color: #fff;
    transition: 0.4s;
}

.header__top-nav .container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 11px 15px;
}

.header__top-nav a,
.header__top-nav a:visited {
    text-decoration: none;

    color: var(--peach);
}

.header__phone-box {
    display: flex;
    flex-direction: column;

    font-family: var(--regular);
}

.header__phone-top-text {
    font-size: var(--text-12);

    color: var(--middleLightGray);
}

.header__phone-bottom-text {
    font-size: var(--text-12);

    color: var(--lightGray);
} 

a.header__phone {
    font-family: var(--bold);
    font-weight: bold;
    font-size: var(--text-20);
}

.header__phone_first { 
    padding: 5px 0;
}

.menu__item_parent>a::after {
    display: block;
    content: ' ';
    width: 10px;
    height: 10px;
    margin: 0 0 0 10px;

    background: url("../images/arrow-down.png") center no-repeat;
    background-size: 80%;
    transition: .3s;
}
.menu__item.menu__item_parent>a {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.menu__item:hover>a::after {
    transform: rotate(-90deg);
    transition: .3s;
}

/* 1.TOP NAVIGATION END */

/* 2.MAIN MENU START */

.menu-wrapper {
    background-color: var(--peach);

    transition: 0.3s;
}

.menu-wrapper .container {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.menu-wrapper .header__phone-box,
.menu-wrapper .header__tagline,
.menu-wrapper .header__phone_second {
    display: none;
}


.menu {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 74%;
}

.menu__item {
    position: relative;

    list-style-type: none;
}

.menu__item a {
    display: block;
    padding: 19px 0;

    font-family: var(--semiBold);
    font-size: var(--text-14);

    text-decoration: none;
    color: #fff;
}

.search .search__input {
    width: 208px;
    padding: 10px 50px 10px 20px;

    font-size: var(--text-14);
    text-align: start;

    color: var(--deepTaupe);
}

.search {
    position: relative;
}

.search__input::placeholder {
    font-family: var(--regular);
    font-size: var(--text-14);

    color: var(--deepTaupe);
}

.search__submit-btn {
    position: absolute;
    right: 20px;
    top: 8px;
    width: 20px;
    height: 20px;

    border: 0px solid transparent;
    background: url('../images/search.png') center no-repeat;
    background-size: 100%;
}

/* 2.1.SUBMENU START */

.menu__item:hover .menu__sub-menu {
    opacity: 1;
    visibility: visible;
    transition: 0.3s;
}

.menu__sub-menu {
    position: absolute;
    top: 40px;
    left: -30px;
    padding: 30px;

    opacity: 0;
    visibility: hidden;
    background-color: #fff;
    border-radius: 5px;
    transition: 0.3s;
}

.menu__sub-menu-item {
    min-width: 250px;

}

.menu__sub-menu a {
    display: block;
    width: 100%;
    padding: 0 10px 19px 0;

    color: var(--peach);
}

/* 2.1.1.SUB-SUBMENU START */

.menu__sub-menu-parent>a::after {
    display: block;
    width: 10px;
    height: 10px;
    content: ' ';

    background: url("../images/arrow-down-peach.png") center no-repeat;
    background-size: 80%;
}

.menu__sub-menu-parent:hover>a::after {
    transform: rotate(-90deg);
    transition: .3s;
}

.menu__sub-menu-parent:hover .menu__sub-sub-menu {
    opacity: 1;
    visibility: visible;
    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);

    transition: .3s;
}

.menu__item .menu__sub-menu-parent>a {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.menu__sub-sub-menu {
    position: absolute;
    width: 100%;
    right: -97%;
    top: 10px;
    padding: 30px;

    opacity: 0;
    visibility: hidden; 
    background-color: #fff;
    border-radius: 5px;
    transition: 0.3s;
}

/* 2.1.1.SUB-SUBMENU END */

/* 2.1.SUBMENU END */

/* 2.MAIN MENU END */

/* 3.BLACKOUT START */

.blackout {
    display: none;
    position: fixed;
    width: 100vw;
    height: 100vh;
    top: 94px;
    left: 0;
    z-index: 3;

    background: rgba(45, 33, 32, 0.7);
    transition: 0.3s;
}

/* 3.BLACKOUT END */

/* 4.ORDER CALL POPUP START */
#order-call {
    display: none;
}
.common-popup-form.fancybox__content {
    position: relative;
    width: 80%;
    max-width: var(--max-width);
    padding: 60px 10%;

    background: #fff;
    text-align: center;
}

.common-popup-p {
    font-size: var(--text-18);

    color: var(--deepTaupe);
    line-height: 24px;
}

.order-popup-p {
    margin: 30px 0 70px;
}

.order-popup {
    cursor: pointer;
}

.common-popup-inputs {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    grid-column-gap: 30px;
    grid-row-gap: 20px;
}

.common-popup-mini-text {
    width: 80%;
    margin: 50px auto 0;
    font-size: var(--text-12);

    color: var(--deepTaupe);
    line-height: 18px;
}

.common-popup-input {
    padding: 11px 20px;

    font-size: var(--text-15) ;

    color: var(--horses);
    border-radius: 0px;
    border: 1px solid var(--pastelGray)
}

.common-popup-input:focus { 
    border: 1px solid var(--peach); 
}

.common-popup-input::placeholder {
    color: var(--deepTaupe);
}

button.popup-btn {
    padding: 15px;
}

.popup-active {
    display: flex;
}
/* 4.ORDER CALL POPUP END */

/* 5.HEADER MEDIA START */

/* 1140px */

@media(max-width: 1140px) {
    .menu__sub-menu-item {
        min-width: 100%;
    }
    .burger-view.mobile-header_active::after {
        top: 9px;

        transform: rotate(-45deg);
        transition: .3s;
    }

    .burger-view.mobile-header_active::before {
        top: 9px;

        transform: rotate(45deg);
        transition: .3s;
    }

    .burger-view.mobile-header_active span {
        transform: scale(0);
        transition: .3s;
    }

    .burger-view {
        display: block;
    }

    .menu-wrapper {
        display: none;
    }

    .menu-wrapper .header__phone {
        color: #fff;
        text-decoration: none;
    }

    header.mobile-header_active .menu-wrapper {
        position: absolute;
        display: block;
        min-width: 250px;
        height:  calc(100vh - 84px);
        z-index: 4;
        padding: 30px 0;

        transition: 0.3s;
        overflow-x: auto;
    }

    .menu__sub-menu {
        width: 100%;
        left: -100%;
    }
    .menu__sub-sub-menu {
        left: -100%;
    }

    header.mobile-header_active .menu-wrapper .container {
        flex-direction: column-reverse;
    }
    header.mobile-header_active .menu-wrapper.submenu-mobile-active {
        padding: 0;
        height: 100vh;
    }

    header.mobile-header_active .menu {
        flex-direction: column;
        align-items: flex-start;
        margin: 20px 0;
        
    }
    
    .blackout.mobile-header_active {
        display: block;

        transition: 0.3s;
    }

    .header__top-nav .header__phone_second {
        display: none;
    }

    .menu-wrapper .header__phone_second {
        display: block;
    }

    .menu__item:hover .menu__sub-menu {
        opacity: inherit;
    }

    header.mobile-header_active .menu__item {
        position: inherit;
    }
    
    .menu__sub-menu.submenu-mobile-active {
        top: 0;
        left: 0;
        min-width: none;
        width: 100%;
        min-height: calc(100vh - 84px);
        z-index: 5;

        border-radius: 0;
        opacity: 1;
    }

    .submenu-mobile-active .sub-submenu-mobile-active {
        position: absolute;
        top: 0px;
        left: 0;
        padding: 60px 30px 15px 15px;
        min-height: calc(100vh - 84px);
        z-index: 6;
    }

    .menu__sub-menu.submenu-mobile-active {
        padding: 60px 15px 0 30px;
    } 

    .burger-view.submenu-mobile-active::before {
        width: 50%;
        top: 14px;

        transform: rotate(45deg);
    }

    .burger-view.submenu-mobile-active::after {
        width: 50%;
        top: 4px;

        transform: rotate(-45deg);
    }

    .burger-view.submenu-mobile-active span {
        transform: scale(0.8);
    }
     
    .menu__item.submenu-mobile-active>a {
        position: absolute;
        top: 0;
        left: 15px;
        z-index: 6;

        font-family: var(--bold);
        font-size: var(--text-20);

        color: var(--horses);
        text-transform: uppercase;
        transition: 0.3s;
    }

    .menu__item .sub-submenu-mobile-active>a {
        position: absolute;
        top: 19px;
        left: 15px;
        z-index: 7;

        font-family: var(--bold);
        font-size: var(--text-20);

        color: var(--horses);
        text-transform: uppercase;
        transition: 0.3s;
    }

    .menu__item .sub-submenu-mobile-active>a::after {
        display: none;
    }

}

/* 918px */

@media(max-width: 918px) {
    .header__gost {
        display: none;
    }

    .header__top-nav .header__tagline {
        display: none;
    }

    .blackout {
        top: 85px;
    }
}

/* 676px */

@media(max-width: 676px) {
    .header__top-nav .header__phone-box {
        display: none;
    }

    .menu-wrapper .header__phone-box {
        display: flex;
        margin: 20px 0 0
    }

    .header__top-nav .container {
        justify-content: flex-start;
    }

    .common-border-button {
        position: absolute;
        right: 15px;
    }

    .logo {
        width: 30%;
        margin: 0 0 0 15px;
    }

    button.header__button {
        padding: 10px;
    }

    .common-popup-inputs {
        display: flex;
        flex-direction: column;
    }
}

/* 570px */

@media(max-width: 570px) {
    .header__top-nav .container{
        height: 84px;
    }

    .menu__sub-menu.submenu-mobile-active {
        height: 100vh;
    }
}

/* 5.HEADER MEDIA END */

